styles.css
* {
    margin: 0;
    padding: 0;
}

a {
    text-decoration: none;
    color: inherit;
    cursor: pointer;
}

body {
        background-color:#faf7f2;

}

h3 {
    color: white;
    font-weight: bold
}

#nav {
    background-color: rgb(253, 254, 255);
    color: #6d8b33;
    font-family: 'Times New Roman', Times, serif;
    font-weight: 700;
    display: flex;
    height: 60px;
    justify-content: space-around;
    padding-top: 35px;
}

#logo {
       
}

#navBtn {
        display: flex;
        justify-content: space-evenly;
        gap: 50px;
        font-weight: bold;
}

#categories {
    display: flex;
    height: 35px;
    background-color: #f57c00;
    justify-content: center;
    gap: 20px;
    padding-top: 15px;
}

.catLink {
    color: white;
    font-weight: bold;
}

.mainH1, .hook {
    padding-top: 15px;
    color: #f57c00;
    font-family: 'Times New Roman', Times, serif;
    font-weight: bolder;
    text-align: center;
}

#container{
    padding-left: 80px;
    padding-right: 80px;
    padding-top: 10px;
}

.gridContainer {
    padding: 5px;
    border: 2px solid #f57c00;
    height: 100%;
    display: grid;
    grid-template-columns: repeat(auto-fit,minmax(300px, 1fr));
    grid-auto-rows: 1fr;
    align-items: center;
    gap: 10px 
}

.gridItem {
    border: 1px solid #ccc;
    padding: 10px;
    text-align: center;
    background-color: #6d8b33;
    height: 200px;
    align-content: center;
}

